# kms.rs

./: .gitignore  Cargo.toml  README.md  TEST_README.md  build.rs  kill_server.sh  run_tests.sh  test_server_start.sh
proto/: synekms.proto
src/: error.rs  lib.rs  main.rs  models.rs  service.rs
tests/: grpc_client_test.rs
